# RoomedGame

./: .kateproject  CMakeLists.txt  CODESTYLE  LICENSE  README.md  README.txt  build.sh
res/: vertex.glsl
src/cpp/: entity-mgr.cpp  main.cpp  world-updater.cpp  world.cpp
src/cpp/entity/: entity.cpp
src/cpp/render/: model-cache.cpp  render-main.cpp  shader-utils.cpp
src/cpp/util/: read-file.cpp
src/h/: aabb.h  config.h  entity-mgr.h  game.h  model.h  triangle.h  world-updater.h  world.h
src/h/entity/: entity.h
src/h/render/: model-cache.h  model.h  render-main.h  shader-utils.h
src/h/util/: optional.h  read-file.h
src/tests/: CMakeLists.txt
src/tests/res/: file-io-test.txt
src/tests/src/: aabb-test.cpp  main.cpp  read-file-test.cpp
